# magic-wormhole-lib.rs

./: Cargo.toml  README.md
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  mediator.rs  util.rs
src/core/: rendezvous.rs
