[package]
name = "wormhole-rs-dll"
version = "0.6.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.120", features = ["rc"] }
serde_json = "1.0.61"
serde_derive = "1.0.120"
log = "0.4.13"
url = { version = "2.2.2", features = ["serde"] }
futures = "0.3.12"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
rand = "0.8.3"

# dll specific dependencies
magic-wormhole = { path = "..", features = ["all"] }
libc = "0.2"
color-eyre = "0.6.0"